crates/swc_ecma_parser/tests/test262-error-references/fail/f0ab9eb343631ea4.js.stderr
error: Expected ';', '}' or <eof>
 --> $DIR/tests/test262-parser/fail/f0ab9eb343631ea4.js:1:4
  |
1 | a++``
  |    ^
  |
note: This is the expression part of an expression statement
 --> $DIR/tests/test262-parser/fail/f0ab9eb343631ea4.js:1:1
  |
1 | a++``
  | ^^^

